--- a/public/translations/errors.json
+++ b/public/translations/errors.json
@@ -6,7 +6,8 @@
     "longError500": "Woops ! The server has problems !",
     "backButtonMessage": "Go back to the previous page",
     "requiredMessage": "This field is Message",
-    "maxLengthMessage": "The maximum length is:"
+    "maxLengthMessage": "The maximum length is:",
+    "outOfRangeMessage": "The maximum value is:"
   },
 
   "fr": {
@@ -16,6 +17,7 @@
     "longError500": "Oups ! Nos serveurs rencontrent actuellement quelques difficultés",
     "backButtonMessage": "Revenir à la page précédente",
     "requiredMessage": "Ce champ est obligatoire",
-    "maxLengthMessage": "Le nombre maximal de caractères pris en charge est de :"
+    "maxLengthMessage": "Le nombre maximal de caractères pris en charge est de :",
+    "outOfRangeMessage": "La quantitée maximale est de :"
   }
 }
