refacto Quantity component and translation's cart and home added

--- a/public/translations/pages/cart.json
+++ b/public/translations/pages/cart.json
@@ -1,9 +1,11 @@
 {
   "en": {
-    "cart": "Cart"
+    "cart": "Cart",
+    "addToCartTextButton": "Add to cart"
   },
 
   "fr": {
-    "cart": "Panier"
+    "cart": "Panier",
+    "addToCartTextButton": "Ajouter au panier"
   }
 }
